# craftbox

./: .gitattributes  CLAUDE.md  CONTRIBUTING.md  Plan.md  README.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  knip.json  knip.jsonc  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/receipts/: colors.md  design.md  tools.md
native/linux-recorder/: CMakeLists.txt
native/linux-recorder/src/: main.cpp
native/macos-recorder/: Package.swift
native/macos-recorder/Sources/BenPocketMacOSRecorderHelper/: main.swift
native/windows-recorder/: CMakeLists.txt
native/windows-recorder/src/: main.cpp
scripts/: check-export-color.mjs  package-native-helper.mjs
src/main/: index.ts  notification-handlers.ts
src/main/file-explorer/: aiGatewayCredential.ts  crossSchemeTransfer.ts  driverRegistry.ts  fileDriver.ts  index.ts  localFileDriver.ts  location.ts  nativeClipboard.ts  r2Credential.ts  r2FileDriver.ts
src/main/http-client/: collectionsTree.ts  httpClientFormat.ts
src/main/http-client/ipc/: collections.ts  collectionsTransfer.ts  environments.ts  http.ts  websocket.ts  workspaces.ts
src/main/kuberneter/: helm-cli.ts  helm-handlers.ts  index.ts  k8s-cli.ts  k8s-handlers.ts
src/main/kuberneter/handlers/: helm-chart-details.ts  helm-chart-icons.ts  helm-chart-versions.ts  helm-install-chart.ts  helm-list-releases.ts  helm-release-values.ts  helm-search-charts.ts  kubeconfig.ts  port-forward.ts  prometheus.ts  resources.ts  top-nodes.ts  top-pods.ts
src/main/notifications/: show-notification.ts
src/main/postman/: collectionsTree.ts  postmanFormat.ts
src/main/postman/ipc/: collections.ts  collectionsTransfer.ts  environments.ts  http.ts  websocket.ts
src/main/screen-recorder/: .gitignore
src/main/screen-recorder/capture/: click-tracker.ts  cursor-tracker.ts  display-for-source.ts  pick-os-capture-source.ts  portal-screenshot.ts  recording-controller.ts  (+5 more)
src/preload/: index.d.ts  index.ts
src/preload/file-explorer/: api.ts
src/preload/http-client/: api.ts  types.d.ts
src/preload/kuberneter/: api.ts
src/preload/postman/: api.ts  types.d.ts
src/preload/screen-recorder/: api.ts
src/preload/screen-stuido/: api.ts
src/renderer/: export-worker.ts  index.html  recorder-toolbar.html  recorder-toolbar.tsx  recording-region-frame.html  region-select.html  region-select.ts  source-picker-overlay.html  source-picker-overlay.tsx
src/renderer/focus-toolbar/: FocusToolbarApp.tsx
src/renderer/source-picker-overlay/: SourcePickerOverlayApp.tsx  overlay.css
src/renderer/src/: App.tsx  env.d.ts
src/shared/: capture-region.ts  constants.ts  cursor-path.ts  cursor-styles.ts  ipc-channels.ts  native-capture.ts  os-picker-source.ts  recorder-toolbar.ts  source-picker-overlay.ts  uses-os-capture-picker.ts  wallpaper-presets.ts  zoom-resolve.ts
(+688 files in other folders)
